@@ -60,6 +60,8 @@ typedef struct _ze_zip_object {
 	int filename_len;
 	int buffers_cnt;
 	zip_int64_t last_id;
+	int err_zip;
+	int err_sys;
 #ifdef HAVE_PROGRESS_CALLBACK
 	zval progress_callback;
 #endif
